fixes jumping window on index.js

--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@ body {
 }
 
 .content-frame {
-   margin-left: auto; margin-right: auto; width: 90% 
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 
 /* a {
@@ -79,9 +81,15 @@ body {
 .main-links {
   display: flex;
   justify-content: flex-end;
-  padding: 10px;
+  padding: 5px;
   width: 500px;
   align-self: flex-end;
+}
+.main-links a {
+  font-style: normal;
+  font-size: larger;
+  padding: 4px;
+  margin-left: 4px;
 }
 
 .period-links {
@@ -160,9 +168,12 @@ a[href*="http"]:after {
   .title h1 {
     font-size: 1.6em;
   }
+  
   .content-frame {
-    margin-left: auto; margin-right: auto; width: 95% 
- }
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+  }
   .title img {
     width: 80px;
   }
@@ -209,8 +220,14 @@ a[href*="http"]:after {
     font-size: small;
   }
   .content-frame {
-    margin-left: auto; margin-right: auto; width: 99% 
- }
+    margin-left: auto;
+    margin-right: auto;
+    width: 99%;
+  }
+  .period-links a {
+    padding: 3px;
+    margin-left: 1px;
+  }
   .period-links {
     font-size: small;
   }
@@ -221,6 +238,10 @@ a[href*="http"]:after {
     width: 100%;
     flex-wrap: wrap;
     align-self: flex-end;
+  }
+  .main-links a {
+    padding: 2px;
+    margin-left: 2px;
   }
   .title h1 {
     font-size: 1.6em;
